--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,4 +1,4 @@
-git+https://github.com/botswana-harvard/django-crypto-fields.git@0.1.14#egg=django_crypto_fields
+pip git+https://github.com/botswana-harvard/django-crypto-fields.git@0.1.14#egg=django_crypto_fields
 git+https://github.com/botswana-harvard/django-revision.git@develop#egg=django_revision
 git+https://github.com/botswana-harvard/edc-appointment.git@develop#egg=edc_appointment
 git+https://github.com/botswana-harvard/edc-base.git@develop#egg=edc_base
